fixed title alignment on the contact page and adjusted top padding for stand alone page

--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -81,8 +81,7 @@
   
     color: #10ab08;
   
-    padding: .1em .2em;
-    padding-top: .8em;
+    padding: 1.2em 0em;
   }
 
   .contactDisclaimer {
